# ag-disease-continuous-time

./: .gitignore  AUTHORS  COPYING  Makefile  README.md  autogen.sh  config.h.in  configure.ac  disease.cpp  disease.hpp  getgit.py  main.cpp  rain.py  scenario.hpp  sir_exp.cpp  sir_exp.hpp  z.py
data/: HPAI_Kershaw_Parameters_no_controls_airborne_only_p5.xml  HPAI_Kershaw_Unit_no_controls.xml  test.xml
doc/: Makefile  adct_out.txt  approximation.tex  compformats.py  data_format.txt  individual_dist.R  intermediate.tex  outbreaksize.R  outbreaksize.py  read_naadsm.py  residence_discrete.py  softeng.bib  softeng.tex  survive_totals.R  testoutput2.txt
src/: Makefile.am  contact_graph.hpp  disease.cpp  disease.hpp  hdf_file.cpp  hdf_file.hpp  main.cpp  naadsm_xml.cpp  naadsm_xml.hpp  scenario.cpp  scenario.hpp  spatial_process.hpp
