ACLOCAL_AMFLAGS = -I ../m4

SUBDIRS =
bin_PROGRAMS = disease
SEMIMARKOV_CXXFLAGS = @SEMIMARKOV_CXXFLAGS@
disease_SOURCES = main.cpp disease.cpp hdf_file.cpp
AM_CXXFLAGS = $(BOOST_CPPFLAGS) $(PTHREAD_CFLAGS) $(SEMIMARKOV_CXXFLAGS)
AM_LDFLAGS = $(BOOST_LDFLAGS) $(BOOST_CHRONO_LIB) $(BOOST_FILESYSTEM_LIB) \
  $(BOOST_LOG_LIB) $(BOOST_LOG_SETUP_LIB) $(BOOST_PROGRAM_OPTIONS_LIB) \
  $(BOOST_SYSTEM_LIB) $(PTHREAD_LIBS) $(LIBS)

